# 18bit-DoH2DNS

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
